[workspace]
resolver = "2"
members = ["core/*", "lib/*", "services/*", "metrics/", "global-metrics/"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
autometrics = { version = "0.6.0", features =["prometheus-exporter"] }
axum = "0.6.18"
bincode = "1.3.3"
cid = "0.10.1"
num-bigint = "0.4.0"
bytes = "1.4"
bigdecimal = "0.3.1"
futures = "0.3"
futures-util = "0.3"
jsonrpc-v2 = "0.11.0"
lru = "0.10.0"
multihash = "0.19"
quinn = "0.10"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.96"
stdext = "0.3.1"
thiserror = "1.0"
tempdir = "0.3"
parking_lot = "0.12.1"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["time"] }
zeroize = "1.6"
scc = "1.8.1"
num-traits = "0.2.15"
num-derive = "0.3.3"
dirs = "5.0.1"
log = "0.4"
lazy_static = "1.4.0"

# Our libraries
lightning-types = { path = "core/types" }
affair = { path = "lib/affair" }
atomo = { path = "lib/atomo" }
atomo-rocks = { path = "lib/atomo-rocks" }
fleek-crypto = { path = "lib/fleek-crypto" }
hp-fixed = { path = "lib/hp-fixed" }
blake3-tree = { path = "lib/blake3-tree" }
ink-quill = { path = "lib/ink-quill" }
resolved-pathbuf = { path = "lib/resolved-pathbuf" }
infusion = { path = "lib/infusion" }
metrics = { path = "metrics" }

# Since MystenLabs uses Hakari in the sui repository, and we bring narwhal in from there, this
# results into all of their dependencies and packages to be listed in their workspace-hack crate.
# That adds a huge amount of unwanted dependencies to our crate. The `empty-workspace-hack` is an
# empty crate which only depends on `strum` which is the only dependency narwhal cared about.
[patch.'https://github.com/MystenLabs/sui.git']
workspace-hack = { git = "https://github.com/fleek-network/empty-workspace-hack.git", rev = "c07eb1e343a455d57a5481b50eada03c62b4f2c6" }
sui-types = { git = "https://github.com/daltoncoder/narwhal-hack.git" }
sui-keys = { git = "https://github.com/daltoncoder/narwhal-hack.git" }

[profile.release]
# 2 full, 0 nothing, 1 good enough.
debug = 1
# currently enabled, may increase build time, but runtime faster, can set to `"thin"`.
lto = true
# optimize for binary size, but also turn off loop vectorization.
opt-level = 'z'
# speeds up build time to offset some of the link time optimization.
codegen-units = 1
# strip debug info from binary.
strip = 'debuginfo'
# On panic terminate the process.
panic = 'abort'
