[package]
name = "global-metrics"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
geohash = "0.13.0"
geo-types = "0.7.11"
hyper = "0.14.27"
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
lightning-types = { path = "../core/types" }
log.workspace = true
serde.workspace = true
serde_derive = "1.0.186"
serde_json.workspace = true
tokio.workspace = true