[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-types = { path="../core/types" }
autometrics = {workspace = true, features =["prometheus"]}
log.workspace = true
prometheus="0.13.3"
once_cell = "1.18.0"
stdext = "0.3.1"
dashmap = "5.5.0"