[package]
name = "lightning-application"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
autometrics.workspace = true
bincode.workspace = true
ethers.workspace = true
lazy_static.workspace = true
serde.workspace = true
toml = "0.7.4"
multiaddr = "0.17.1"
lightning-interfaces = { path = "../interfaces" }
lightning-reputation = { path = "../reputation" }
lightning-utils = { path = "../utils" }
lightning-metrics = { path = "../metrics" }
num-traits.workspace = true
rand.workspace = true
fleek-blake3 = "1.5"
tracing.workspace = true
tokio.workspace = true

# Our libraries
affair.workspace = true
atomo.workspace = true
fleek-crypto.workspace = true
hp-fixed.workspace = true
atomo-rocks.workspace = true
resolved-pathbuf.workspace = true
lightning-workspace-hack.workspace = true
merklize.workspace = true
serde_with = "3.8.1"


[dev-dependencies]
lightning-test-utils = { path = "../test-utils" }
tokio.workspace = true
rand.workspace = true
tempfile.workspace = true

[features]
test = []
