[package]
name = "lightning-archive"
version = "0.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
affair.workspace = true
anyhow.workspace = true
async-trait.workspace = true
resolved-pathbuf.workspace = true
serde.workspace = true
tokio.workspace = true
log.workspace = true
bincode.workspace = true
ethers.workspace = true
rocksdb = "0.21"


[dev-dependencies]
lightning-application = { path="../application", features = ["test"] }
infusion.workspace = true
fleek-crypto.workspace = true
