[package]
name = "lightning-archive"
version = "0.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
affair.workspace = true
anyhow.workspace = true
resolved-pathbuf.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
bincode.workspace = true
ethers.workspace = true
rocksdb = "0.21"
atomo-rocks.workspace = true
atomo.workspace = true


[dev-dependencies]
lightning-blockstore = { path = "../blockstore" }
lightning-application = { path = "../application", features = ["test"] }
lightning-notifier = { path = "../notifier" }
lightning-test-utils = { path = "../test-utils" }
