[package]
name = "lightning-blockstore-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lightning-interfaces = { path = "../interfaces" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
infusion.workspace = true
affair.workspace = true
fleek-crypto.workspace = true
triomphe = "0.1.9"
blake3-stream = { path = "../../lib/blake3-stream" }
blake3-tree = { path = "../../lib/blake3-tree" }

[dev-dependencies]
lightning-blockstore = { path = "../blockstore" }
