[package]
name = "lightning-blockstore-server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-metrics = { path = "../metrics" }
blake3-tree = { path = "../../lib/blake3-tree" }
affair.workspace = true
bytes.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror = "1.0"
workspace-hack = { version = "0.1", path = "../../etc/workspace-hack" }

[dev-dependencies]
lightning-test-utils = { path = "../test-utils" }
lightning-application = { path = "../application", features = ["test"] }
lightning-blockstore = { path = "../blockstore" }
lightning-indexer = { path = "../indexer" }
lightning-notifier = { path = "../notifier" }
lightning-topology = { path = "../topology" }
lightning-signer = { path = "../signer" }
lightning-pool = { path = "../pool" }
lightning-rep-collector = { path = "../rep-collector" }
fleek-crypto.workspace = true
