[package]
name = "lightning-blockstore"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-utils = { path = "../utils" }
bincode.workspace = true
resolved-pathbuf.workspace = true
blake3-tree = { path = "../../lib/blake3-tree" }
anyhow.workspace = true
trait-variant = "0.1"
bytes.workspace = true
tracing.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tempdir.workspace = true
tokio.workspace = true
derive_more = "0.99"
arrayref = "0.3"
workspace-hack = { version = "0.1", path = "../../etc/workspace-hack" }
