[package]
name = "lightning-broadcast"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
anyhow.workspace = true
arrayref = "0.3.7"
async-trait.workspace = true
bytes = "1.4.0"
tokio.workspace = true
tokio-util.workspace = true
fleek-crypto = { path = "../../lib/fleek-crypto" }
ink-quill = { path = "../../lib/ink-quill" }
lightning-interfaces = { path = "../interfaces" }
lightning-metrics = { path = "../metrics" }
dashmap = "5.5.0"
mini-moka = "0.10.2"
fxhash = "0.2"
futures = "0.3"
affair.workspace = true
infusion.workspace = true
derive_more = "0.99"
im = "15.1"
quick_cache = "0.4.0"
smallvec = "1.11.0"
ta = "0.5.0"
tracing.workspace = true
rand = { version = "0.8.5", features = ["small_rng"] }


[dev-dependencies]
lightning-signer = { path = "../signer" }
lightning-application = { path = "../application", features = ["test"] }
lightning-pool = { path = "../pool" }
lightning-notifier = { path = "../notifier" }
lightning-rep-collector = { path = "../rep-collector" }
lightning-topology = { path = "../topology" }
