[package]
name = "lightning-cli"
version = "0.1.0"
edition = "2021"
default-run = "lightning-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-node = { path = "../node" }
lightning-types = { path = "../types" }
lightning-utils = { path = "../utils" }

# TODO: cli ideally shouldn't depend on this directly
lightning-application = { path = "../application" }

fleek-crypto.workspace = true
resolved-pathbuf.workspace = true
infusion.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
clap = { version = "4.4.2", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = "0.3"
console-subscriber = { version = "0.2.0" }
fleek-blake3 = "1.5"
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
rand.workspace = true
panic-report.workspace = true
os_info = "3.7.0"
compile-time-run = "0.2.12"

[dev-dependencies]
serial_test = "3.0.0"
lightning-application = { path = "../application" }
lightning-syncronizer = { path = "../syncronizer" }
lightning-broadcast = { path = "../broadcast" }
lightning-consensus = { path = "../consensus" }
lightning-handshake = { path = "../handshake" }
lightning-service-executor = { path = "../service-executor" }
lightning-pool = { path = "../pool" }
lightning-rep-collector = { path = "../rep-collector" }
lightning-keystore = { path = "../keystore" }
lightning-signer = { path = "../signer" }
lightning-blockstore = { path = "../blockstore" }
lightning-blockstore-server = { path = "../blockstore-server" }
lightning-resolver = { path = "../resolver" }
lightning-archive = { path = "../archive" }
lightning-pinger = { path = "../pinger" }
lightning-rpc = { path = "../rpc" }
fleek-blake3 = "1.5"

[features]
default = []
# Opt-in for compiling services directly inside the node
services = ["lightning-node/services"]

[[bin]]
name = "lightning-node"
path = "src/main.rs"
