[package]
name = "lightning-cli"
version = "0.1.0"
edition = "2021"
default-run = "lightning-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-application = { path = "../application" }
lightning-rpc = { path = "../rpc" }
lightning-handshake = { path = "../handshake" }
lightning-ebpf-service = { path = "../../etc/ebpf/service" }
lightning-interfaces = { path = "../interfaces" }
lightning-node = { path = "../node" }
lightning-final-bindings = { path = "../final-bindings" }
lightning-utils = { path = "../utils" }
lightning-tui = { path = "../../etc/tui" }

fleek-crypto.workspace = true
resolved-pathbuf.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
clap = { version = "4.4.2", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = "0.3"
console-subscriber = { version = "0.2.0" }
fleek-blake3 = "1.5"
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
rand.workspace = true
panic-report.workspace = true
once_cell = "1.19"
os_info = "3.7.0"
tui-logger = { version = "0.11", optional = true }
compile-time-run = "0.2.12"
workspace-hack = { version = "0.1", path = "../../etc/workspace-hack" }

[dev-dependencies]
serial_test = "3.0.0"
lightning-syncronizer = { path = "../syncronizer" }
lightning-broadcast = { path = "../broadcast" }
lightning-consensus = { path = "../consensus" }
lightning-service-executor = { path = "../service-executor" }
lightning-pool = { path = "../pool" }
lightning-rep-collector = { path = "../rep-collector" }
lightning-keystore = { path = "../keystore" }
lightning-signer = { path = "../signer" }
lightning-blockstore = { path = "../blockstore" }
lightning-blockstore-server = { path = "../blockstore-server" }
lightning-resolver = { path = "../resolver" }
lightning-archive = { path = "../archive" }
lightning-pinger = { path = "../pinger" }
fleek-blake3 = "1.5"
assert_cmd = "2.0.14"
tempdir.workspace = true

[features]
default = []
# Opt-in for compiling services directly inside the node.
services = ["lightning-final-bindings/services"]
dev = ["lightning-tui/logger", "tui-logger"]

[target.'cfg(linux)'.dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "e5d107d", features = [
    "async_tokio",
], optional = true }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "e5d107d", optional = true }

[[bin]]
name = "lightning-node"
path = "src/main.rs"
