[package]
name = "lightning-committee-beacon"
version = "0.0.0"
edition = "2021"


[dependencies]
affair.workspace = true
atomo.workspace = true
atomo-rocks.workspace = true
anyhow.workspace = true
fleek-crypto.workspace = true
lightning-interfaces.workspace = true
lightning-utils.workspace = true
lightning-workspace-hack.workspace = true
rand.workspace = true
resolved-pathbuf.workspace = true
sha3.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true


[dev-dependencies]
futures.workspace = true
lightning-test-utils.workspace = true
tempfile.workspace = true
tokio.workspace = true
