[package]
name = "lightning-consensus"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
affair.workspace = true
fleek-crypto.workspace = true
resolved-pathbuf.workspace = true
async-trait.workspace = true
bincode.workspace = true
lightning-interfaces = { path = "../interfaces" }
lightning-utils = { path = "../utils" }
lightning-metrics = { path = "../metrics" }
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true

rand = "0.8.5"
derive_more = "0.99.17"
futures-util = "0.3.28"
fxhash = "0.2.1"
dashmap = "5.5.0"
fleek-blake3 = "1.5"
quick_cache = "0.4.0"

# Narwhal b06ada015694890d7c46347b13fbc3e9a763513c
narwhal-config = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-config" }
narwhal-consensus = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-consensus" }
narwhal-crypto = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-crypto" }
narwhal-executor = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-executor" }
narwhal-node = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-node" }
narwhal-primary = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-primary" }
narwhal-types = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-types" }
narwhal-worker = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-worker" }
narwhal-network = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-network" }
typed-store = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "typed-store" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "mysten-metrics" }
mysten-network = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "mysten-network" }
sui-protocol-config = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "sui-protocol-config" }
tonic = { version = "0.8.2", features = ["transport", "tls"] }

prometheus = "0.13.3"
multiaddr = "0.17.1"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c961a01596a87e76f590c7e43aca9d57106dbbb1" }
